[package]
name = "start-remote-daemon"
version = "0.1.0"
authors = ["Howard Zhu <zhc_howard@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.8.2"
rpassword = "5.0.0"
regex = "1.3.9"
structopt = "0.3.15"

[[bin]]
name = "remote-demo"
path = "src/main.rs"
